[package]
name = "iroh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"]}
pnet = "0.30.0"
tabled = "0.10.0"
reqwest = "0.11.14"
csv = "1.1.6"
tokio = {version = "1", features = ["full"]}